Doc: Rename Kriging sections to GPR

--- a/python/src/KrigingAlgorithm_doc.i.in
+++ b/python/src/KrigingAlgorithm_doc.i.in
@@ -1,7 +1,7 @@
 %feature("docstring") OT::KrigingAlgorithm
 "Kriging algorithm.
 
-Refer to :ref:`kriging`.
+Refer to :ref:`gaussian_process_regression`.
 
 
 Parameters
