--- a/python/src/GaussianProcessRegression_doc.i.in
+++ b/python/src/GaussianProcessRegression_doc.i.in
@@ -5,7 +5,7 @@
     This class is experimental and likely to be modified in future releases.
     To use it, import the ``openturns.experimental`` submodule.
 
-Refer to :ref:`kriging`.
+Refer to :ref:`gaussian_process_regression`.
 
 Available constructors:
     GaussianProcessRegression(*gprFitterResult*)
